# BlueOS

./: .coveragerc  .eslintrc.js  .gitignore  .gitmodules  .pylintrc  AGENTS.md  CoC.md  Dockerfile  LICENSE-BlueOS-Custom.md  LICENSE.md  README.md  build_all.sh  dev.yml  pyproject.toml  run.py  setup.py
core/: .dockerignore  Dockerfile  install_gst.sh  pyproject.toml  readme.md  requirements.txt  run-service.sh  start-blueos-core  start-companion-core
core/compose/: compose.yml
core/configuration/: motd  tmux.conf
core/configuration/ardupilot/navigator/: default.parm
core/cron/: waste-collector
core/devtools/: copy-services-to-remote.sh  pull-services-from-remote.sh
core/frontend/: .gitignore  .stylelintrc.json  bun.lockb  index.html  package.json  tsconfig.json  vite.config.js  vue.config.js
core/frontend/public/: index.html
core/frontend/public/msgs/: CompressedVideo.msg
core/frontend/src/: App.vue  cosmos.ts  main.ts  menus.ts  one-more-time.ts
core/frontend/src/libs/: MAVLink2Rest.ts  console-logger.ts  error-message.ts  filebrowser.ts  message-manager.ts  notifier.ts  popup.ts  settings.ts
core/frontend/src/plugins/: vuetify.ts
core/frontend/src/router/: index.ts
core/frontend/src/store/: ardupilot_capabilities.ts  ardupilot_sensors.ts  autopilot.ts  autopilot_manager.ts  bag.ts  beacon.ts  bridget.ts  commander.ts  customization.ts  disk.ts  ethernet.ts  frontend.ts  health_monitor.ts  helper.ts  index.ts  mavlink.ts  nmea-injector.ts  notifications.ts  pardal.ts  ping.ts  popups.ts  records.ts  servicesScanner.ts  settings.ts  system-information.ts  video.ts  wifi.ts
core/frontend/src/types/: autopilot.ts  beacon.ts  bridges.ts  broadway-player.d.ts  commander.ts  common.ts  customization.ts  disk.ts  ethernet.ts  filebrowser.ts  frontend_services.ts  helper.ts  (+17 more)
core/install/: spi0-led.dts
core/libs/: install-libs.sh
core/libs/bridges/: README.md  pyproject.toml  setup.py
core/libs/commonwealth/: README.md  pyproject.toml  setup.py
core/libs/mavftp/: mavftp.py
core/python-venv2/: pyproject.toml
core/services/: install-services.sh  requirements.txt
core/services/ardupilot_manager/: ArduPilotManager.py  README.md  args.py  autopilot_manager.py  config.py  default_arguments.json  exceptions.py  main.py  pyproject.toml  settings.py  setup.py  typedefs.py  utils.py
core/services/bag_of_holding/: main.py  pyproject.toml  setup.py
core/services/beacon/: default-settings.json  main.py  pyproject.toml  settings.py  setup.py  typedefs.py
core/services/bridget/: bridget.py  config.py  main.py  pyproject.toml  settings.py  setup.py
core/services/cable_guy/: .gitignore  README.md  config.py  main.py  networksetup.py  pyproject.toml  setup.py  typedefs.py  typedefs_pydantic_network_shin.py
core/services/commander/: main.py  pyproject.toml  service_definitions.py  setup.py
core/services/customization/: main.py  pyproject.toml  storage.py  theme.py
core/services/disk_usage/: main.py  pyproject.toml
core/services/health_monitor/: __init__.py  main.py  monitor.py  pyproject.toml
core/services/helper/: .gitignore  README.md  main.py  nginx_parser.py  pyproject.toml  setup.py
core/services/kraken/: args.py  config.py  exceptions.py  extension_logs.py  kraken.py  main.py  pyproject.toml  settings.py  setup.py  utils.py
core/services/log_zipper/: main.py  pyproject.toml  setup.py
core/services/major_tom/: main.py  major_tom.py  session_tracker.py  settings.py  setup.py  system_data.py
core/services/mavftp/: ftp_op.py  main.py  mavftp.py  setup.py
core/services/mavlink_router/: bootstrap.py  run
core/services/mcap-logger/: main.py
core/services/mcap_logger/: pyproject.toml
core/services/nmea_injector/: MavlinkNMEA.py  README.md  TrafficController.py  exceptions.py  main.py  pyproject.toml  settings.py  setup.py
core/services/odometer/: main.py  pyproject.toml
core/services/pardal/: README.md  main.py  pyproject.toml  setup.py
core/services/ping/: bridges.py  exceptions.py  main.py  ping1d_driver.py  ping1d_mavlink.py  ping360_driver.py  ping360_ethernet_driver.py  ping360_ethernet_prober.py  pingdriver.py  pingmanager.py  pingprober.py  pingutils.py  portwatcher.py  pyproject.toml  serialhelper.py  settings.py  setup.py  typedefs.py
core/services/recorder_extractor/: main.py  pyproject.toml
core/services/service_manager/: pyproject.toml
core/services/versionchooser/: .gitignore  args.py  docker_login.py  main.py  pyproject.toml  setup.py  test_versionchooser.py
core/services/wifi/: .gitignore  Hotspot.py  WifiManager.py  exceptions.py  main.py  pyproject.toml  settings.py  setup.py  start.sh  typedefs.py  wpa_supplicant.py
core/tools/: install-python-libs.sh  install-static-binaries.sh  install-system-tools.sh
core/tools/ardupilot_tools/: bootstrap.sh  setup-python-libs.sh
core/tools/blueos_startup_update/: blueos_startup_update  blueos_startup_update.py  bootstrap.sh
core/tools/bridges/: bootstrap.sh
core/tools/cable_guy/: bootstrap.sh
core/tools/disktest/: bootstrap.sh
core/tools/dnsmasq/: bootstrap.sh
core/tools/dump_journal/: dump_journal.py
core/tools/filebrowser/: bootstrap.sh
core/tools/hotspot/: bootstrap.sh
core/tools/iperf3/: bootstrap.sh
core/tools/linux2rest/: bootstrap.sh
core/tools/logviewer/: bootstrap.sh
core/tools/machineid/: bootstrap.sh
core/tools/mavftp/: bootstrap.sh
core/tools/mavlink2rest/: bootstrap.sh
core/tools/mavlink_camera_manager/: bootstrap.sh
core/tools/mavlink_router/: bootstrap.py  bootstrap.sh
core/tools/mavlink_server/: bootstrap.sh
core/tools/mavp2p/: bootstrap.sh
core/tools/mcap/: bootstrap.sh
core/tools/mcap-extractor/: bootstrap.sh
core/tools/nginx/: bootstrap.sh  cors.conf  nginx.conf  nginx.conf.template  nginx_tls.conf.template
core/tools/recorder/: bootstrap.sh
core/tools/scripts/: bootstrap.sh  journalctl-vacuum  red-pill
core/tools/service-manager/: config.toml
core/tools/sudo/: bootstrap.sh
core/tools/ttyd/: bootstrap.sh
core/tools/wifi/: bootstrap.sh
core/tools/zenoh/: blueos-zenoh.json5  bootstrap.sh
(+693 files in other folders)
