[project]
name = "blueos-core-venv2"
version = "1.4.0"
description = "Runtime workspace for BlueOS services that require newer dependencies."
requires-python = ">=3.11"
dependencies = [
  "commonwealth",
  "versionchooser",
  "kraken",
  "helper",
]

[dependency-groups]
dev = [
  "coverage==7.5.1",
  "nmeasim==1.1.1.0",
  "pytest==7.4.2",
  "pytest-cov==4.1.0",
  "pyfakefs==5.2.4",
  "pytest-asyncio==0.14.0",
  "pytest-mock==3.10.0",
  "pytest-timeout==2.1.0",
  "pytest-xdist>=3.3.1",
  "pyelftools==0.30",
]
lint = [
  "black==22.3.0",
  "isort==5.8",
  "pylint==3.0",
  "mypy==1.4.1",
  "ruff==0.0.288",
  "pylint-pydantic==0.3.2",
  "pylint-plugin-utils==0.8.2",
  "types-requests==2.31.0.2",
]

[tool.uv]
default-groups = ["dev", "lint"]

[tool.uv.sources]
commonwealth = { workspace = true }
versionchooser = { workspace = true }
kraken = { workspace = true }
helper = { workspace = true }

[tool.uv.workspace]
members = [
  "../libs/commonwealth",
  "../services/versionchooser",
  "../services/kraken",
  "../services/helper",
]
