[project]
name = "commonwealth"
version = "0.1.0"
description = "BlueOS library to share common code."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.7.4,<=3.13.2",
    "appdirs==1.4.4",
    "eclipse-zenoh==1.4.0",
    "loguru>=0.5.3,<=0.7.3",
    "packaging>=20.4,<=25.0",
    "psutil>=5.7.2,<=7.1.3",
    "pydantic>=1.10.12,<=2.12.5",
    "sentry-sdk==2.29.1",
    "starlette>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
