[project]
name = "ardupilot_manager"
version = "0.0.1"
description = "AutoPilot service manager."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "appdirs==1.4.4",
    "commonwealth==0.1.0",
    "fastapi==0.115.14",
    "fastapi-versioning==0.10.0",
    "loguru==0.7.3",
    "packaging==25.0",
    "psutil==7.0.0",
    "pydantic==2.11.7",
    "pyelftools==0.32",
    "pyserial==3.5",
    # This dependency needs to be locked since it is used by fastapi
    "python-multipart==0.0.20",
    "smbus2==0.5.0",
    "uvicorn==0.35.0",
    "validators==0.35.0",
]

[tool.uv]
package = false

[tool.uv.sources]
commonwealth = { workspace = true }
