[project]
name = "bag_of_holding"
version = "0.1.0"
description = "Allow the persistence of arbitrary data in a Blue Robotics BlueOS system."
requires-python = ">=3.11"
dependencies = [
    "appdirs==1.4.4",
    "commonwealth==0.1.0",
    "dpath==2.2.0",
    "fastapi==0.115.14",
    "fastapi-versioning==0.10.0",
    "loguru==0.7.3",
    "pydantic==2.11.7",
    "uvicorn==0.35.0"
]

[tool.uv]
package = false

[tool.uv.sources]
commonwealth = { workspace = true }
