[project]
name = "bridget"
version = "0.1.0"
description = "Manager for 'bridges' links."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anyio==3.7.1",
    "bridges==0.1.0",
    "commonwealth==0.1.0",
    "fastapi==0.105.0",
    "fastapi-versioning==0.9.1",
    "loguru==0.5.3",
    "uvicorn==0.13.4",
]

[tool.uv.sources]
bridges = { workspace = true }
commonwealth = { workspace = true }
