[project]
name = "bridget"
version = "0.1.0"
description = "Manager for 'bridges' links."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bridges==0.1.0",
    "commonwealth==0.1.0",
    "fastapi==0.105.0",
    "fastapi-versioning==0.9.1",
    "loguru==0.5.3",
    "pydantic==1.10.12",
    "pyserial==3.5",
    "requests==2.26.0",
    "uvicorn==0.18.0",
]

[tool.uv.sources]
bridges = { workspace = true }
commonwealth = { workspace = true }
