[project]
name = "bridget"
version = "0.1.0"
description = "Manager for 'bridges' links."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bridges==0.1.0",
    "commonwealth==0.1.0",
    "fastapi==0.115.14",
    "fastapi-versioning==0.10.0",
    "loguru==0.7.3",
    "pydantic==2.11.7",
    "pyserial==3.5",
    "requests==2.32.4",
    "uvicorn==0.35.0",
]

[tool.uv]
package = false

[tool.uv.sources]
bridges = { workspace = true }
commonwealth = { workspace = true }
