[project]
name = "helper"
version = "0.1.0"
description = "Helper information for development."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.13.4",
    "commonwealth==0.1.0",
    "fastapi==0.115.14",
    "fastapi-versioning==0.10.0",
    "loguru==0.7.3",
    "psutil==7.0.0",
    "pydantic==2.11.7",
    "speedtest-cli==2.1.3",
    "uvicorn==0.35.0",
]

[tool.uv]
package = false

[tool.uv.sources]
commonwealth = { workspace = true }
