[project]
name = "helper"
version = "0.1.0"
description = "Helper information for development."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.9.3",
    "commonwealth==0.1.0",
    "fastapi==0.105.0",
    "fastapi-versioning==0.9.1",
    "loguru==0.5.3",
    "psutil==5.7.2",
    "pydantic==1.10.12",
    "speedtest-cli==2.1.3",
    "requests==2.26.0",
    "uvicorn==0.18.0",
]

[tool.uv]
package = false

[tool.uv.sources]
commonwealth = { workspace = true }
