[project]
name = "helper"
version = "0.1.0"
description = "Helper information for development."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.14.3",
    "commonwealth==0.1.0",
    "fastapi==0.125.0",
    "fastapi-versioning==0.10.0",
    "loguru==0.7.3",
    "psutil==7.1.3",
    "pydantic==2.12.5",
    "speedtest-cli==2.1.3",
    "requests==2.32.5",
    "uvicorn==0.38.0",
]

[tool.uv]
package = false
