[project]
name = "kraken"
version = "0.1.0"
description = "Manages BlueOS extensions."
requires-python = ">=3.11"
dependencies = [
    "aiocache==0.12.2",
    "aiodocker==0.21.0",
    "aiohttp==3.7.4",
    "commonwealth==0.1.1",
    "fastapi==0.105.0",
    "fastapi-versioning==0.9.1",
    "loguru==0.5.3",
    "psutil==5.7.2",
    "pydantic==1.10.12",
    "semver==3.0.2",
    "uvicorn==0.18.0",
]

[tool.uv.sources]
commonwealth = { workspace = true }
