[project]
name = "kraken"
version = "0.1.0"
description = "Manages BlueOS extensions."
requires-python = ">=3.11"
dependencies = [
    "aiocache==0.12.3",
    "aiodocker==0.24.0",
    "aiohttp==3.12.13",
    "commonwealth==0.1.1",
    "fastapi==0.115.14",
    "fastapi-versioning==0.10.0",
    "loguru==0.7.3",
    "psutil==7.0.0",
    "pydantic==2.11.7",
    "semver==3.0.4",
    "uvicorn==0.35.0",
]

[tool.uv]
package = false

[tool.uv.sources]
commonwealth = { workspace = true }
