[project]
name = "kraken"
version = "0.1.0"
description = "Manages BlueOS extensions."
requires-python = ">=3.11"
dependencies = [
    "aiocache==0.12.3",
    "aiodocker==0.24.0",
    "aiohttp==3.13.2",
    "commonwealth==0.1.0",
    "fastapi==0.125.0",
    "fastapi-versioning==0.10.0",
    "loguru==0.7.3",
    "psutil==7.1.3",
    "pydantic==2.12.5",
    "semver==3.0.4",
    "uvicorn==0.38.0",
]

[tool.uv]
package = false
