[project]
name = "nmea_injector"
version = "0.1.0"
description = "BlueOS NMEA Injector."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anyio==3.7.1",
    "appdirs==1.4.4",
    "commonwealth==0.1.0",
    "fastapi==0.105.0",
    "fastapi-versioning==0.9.1",
    "loguru==0.5.3",
    "pynmea2==1.18.0",
    "pytest-mock==3.10.0",
    "starlette==0.27.0",
    "uvicorn==0.13.4",
    "validators==0.18.2",
]

[tool.uv.sources]
commonwealth = { workspace = true }
