[project]
name = "nmea_injector"
version = "0.1.0"
description = "BlueOS NMEA Injector."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "commonwealth==0.1.0",
    "fastapi==0.115.14",
    "fastapi-versioning==0.10.0",
    "loguru==0.7.3",
    "pydantic==2.11.7",
    "pynmea2==1.19.0",
    "uvicorn==0.35.0",
]

[tool.uv]
package = false

[tool.uv.sources]
commonwealth = { workspace = true }
