[project]
name = "nmea_injector"
version = "0.1.0"
description = "BlueOS NMEA Injector."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "commonwealth==0.1.0",
    "fastapi==0.105.0",
    "fastapi-versioning==0.9.1",
    "loguru==0.5.3",
    "pydantic==1.10.12",
    "pynmea2==1.18.0",
    "uvicorn==0.18.0",
]

[tool.uv]
package = false

[tool.uv.sources]
commonwealth = { workspace = true }
