[project]
name = "pardal"
version = "0.1.0"
description = "Web service to help with speed and latency tests."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.7.4",
    "commonwealth==0.1.0",
    "loguru==0.5.3",
    "speedtest-cli==2.1.3",
]

[tool.uv]
package = false

[tool.uv.sources]
commonwealth = { workspace = true }
