[project]
name = "ping"
version = "0.2.0"
description = "Ping service for BlueRobotics' Ping1D and Ping360."
requires-python = ">=3.11"
dependencies = [
    "anyio==3.7.1",
    "bluerobotics-ping==0.1.5",
    "bridges==0.1.0",
    "commonwealth==0.1.0",
    "fastapi==0.105.0",
    "fastapi-versioning==0.9.1",
    "loguru==0.5.3",
    "pyserial==3.5",
    "starlette==0.27.0",
    "uvicorn==0.13.4",
]

[tool.uv.sources]
bridges = { workspace = true }
commonwealth = { workspace = true }
