[project]
name = "ping"
version = "0.2.0"
description = "Ping service for BlueRobotics' Ping1D and Ping360."
requires-python = ">=3.11"
dependencies = [
    "bluerobotics-ping==0.1.5",
    "bridges==0.1.0",
    "commonwealth==0.1.0",
    "fastapi==0.105.0",
    "fastapi-versioning==0.9.1",
    "loguru==0.5.3",
    "psutil==5.7.2",
    "pydantic==1.10.12",
    "pyserial==3.5",
    "uvicorn==0.18.0",
]

[tool.uv.sources]
bridges = { workspace = true }
commonwealth = { workspace = true }
