[project]
name = "ping"
version = "0.2.0"
description = "Ping service for BlueRobotics' Ping1D and Ping360."
requires-python = ">=3.11"
dependencies = [
    "bluerobotics-ping==0.1.5",
    "bridges==0.1.0",
    "commonwealth==0.1.0",
    "fastapi==0.115.14",
    "fastapi-versioning==0.10.0",
    "loguru==0.7.3",
    "psutil==7.0.0",
    "pydantic==2.11.7",
    "pyserial==3.5",
    "uvicorn==0.35.0",
]

[tool.uv]
package = false

[tool.uv.sources]
bridges = { workspace = true }
commonwealth = { workspace = true }
