[project]
name = "recorder_extractor"
version = "0.1.0"
description = "Serve and manage recorded MP4 files with thumbnails and streaming."
requires-python = ">=3.11"
dependencies = [
    "aiocache==0.12.2",
    "commonwealth==0.1.0",
    "fastapi==0.105.0",
    "fastapi-versioning==0.9.1",
    "loguru==0.5.3",
    "pydantic==1.10.12",
    "uvicorn==0.18.0",
]

[tool.uv]
package = false

[tool.uv.sources]
commonwealth = { workspace = true }
