[project]
name = "versionchooser"
version = "0.1.0"
description = "Blue Robotics Ardusub BlueOS Version Chooser."
requires-python = ">=3.11"
dependencies = [
    "aiodocker==0.24.0",
    "aiohttp==3.12.13",
    "appdirs==1.4.4",
    "commonwealth==0.1.1",
    "fastapi==0.115.14",
    "fastapi-versioning==0.10.0",
    "docker==6.0.0",
    "loguru==0.7.3",
    "uvicorn==0.35.0",
]

[tool.uv]
package = false

[tool.uv.sources]
commonwealth = { workspace = true }
