[project]
name = "versionchooser"
version = "0.1.0"
description = "Blue Robotics Ardusub BlueOS Version Chooser."
requires-python = ">=3.11"
dependencies = [
    "aiodocker==0.24.0",
    "aiohttp==3.13.2",
    "appdirs==1.4.4",
    "commonwealth==0.1.0",
    "docker==7.1.0",
    "fastapi==0.125.0",
    "fastapi-versioning==0.10.0",
    "loguru==0.7.3",
    "pydantic==2.12.5",
    "python-multipart==0.0.21",
    "uvicorn==0.38.0",
]

[tool.uv]
package = false
