[project]
name = "wifi"
version = "0.1.0"
description = "Wifi manager."
requires-python = ">=3.11"
dependencies = [
    "aiofiles==0.6.0",
    "anyio==3.7.1",
    "commonwealth==0.1.0",
    "fastapi==0.105.0",
    "fastapi-versioning==0.9.1",
    "loguru==0.5.3",
    "starlette==0.27.0",
    "tabulate==0.8.9",
    "types-tabulate==0.8.3",
    "uvicorn==0.13.4",
]

[tool.uv.sources]
commonwealth = { workspace = true }
