[project]
name = "wifi"
version = "0.1.0"
description = "Wifi manager."
requires-python = ">=3.11"
dependencies = [
    "commonwealth==0.1.0",
    "fastapi==0.105.0",
    "fastapi-versioning==0.9.1",
    "loguru==0.5.3",
    "psutil==5.7.2",
    "pydantic==1.10.12",
    "pyroute2==0.8.1",
    "sdbus-networkmanager==2.0.0",
    "uvicorn==0.18.0",
]

[tool.uv]
package = false

[tool.uv.sources]
commonwealth = { workspace = true }
